[ADD]:contact section

--- a/pages/service.html
+++ b/pages/service.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/about-us/service.css" />
     <link rel="stylesheet" href="/css/about-us/tech.css" />
+    <link rel="stylesheet" href="/css/about-us/success.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -120,42 +122,197 @@
             </div>
           </div>
         </div>
-      </section>  
+      </section>
       <section class="tech-section">
-  <div class="container">
-    <h2 class="tech-title">Technologies We Use</h2>
-    <p class="tech-subtitle">
-      At BCG, we leverage a diverse stack of modern technologies to deliver scalable, efficient, and robust solutions.
-    </p>
+        <div class="container">
+          <h2 class="tech-title">Technologies We Use</h2>
+          <p class="tech-subtitle">
+            At BCG, we leverage a diverse stack of modern technologies to
+            deliver scalable, efficient, and robust solutions.
+          </p>
 
-    <div class="tech-grid">
-      <div  class="tech-item"><img style="background-color: #fff; padding: 10px 8px; " src="https://storage.googleapis.com/cms-storage-bucket/flutter-logo.6a07d8a62f4308d2b854.svg" alt="Flutter"></div>
-      <div class="tech-item"><img src="" alt="React"></div>
-      <div class="tech-item"><img src="" alt="Node.js"></div>
-      <div class="tech-item"><img src=" alt="Java"></div>
-      <div class="tech-item"><img src="" alt="Tailwind CSS"></div>
-      <div class="tech-item"><img src="" alt="HTML5"></div>
-      <div class="tech-item"><img src="" alt="CSS3"></div>
-      <div class="tech-item"><img src="" alt="JavaScript"></div>
-      <div class="tech-item"><img src="" alt="TypeScript"></div>
-      <div class="tech-item"><img src="" alt="Python"></div>
-      <div class="tech-item"><img src="" alt="MySQL"></div>
-      <div class="tech-item"><img src="" alt="MongoDB"></div>
-      <div class="tech-item"><img src="" alt="PostgreSQL"></div>
-      <div class="tech-item"><img src="" alt="Firebase"></div>
-      <div class="tech-item"><img src="" alt="Redis"></div>
-      <div class="tech-item"><img src="" alt="Kafka"></div>
-      <div class="tech-item"><img src="" alt="RabbitMQ"></div>
-      <div class="tech-item"><img src="" alt="Kubernetes"></div>
-      <div class="tech-item"><img src="" alt="AWS"></div>
-      <div class="tech-item"><img src="" alt="Azure"></div>
-      <div class="tech-item"><img src="" alt="Google Cloud"></div>
-      <div class="tech-item"><img src="" alt="Docker"></div>
-      <div class="tech-item"><img src="" alt="Grafana"></div>
-    </div>
-  </div>
-</section>
+          <div class="tech-grid">
+            <div class="tech-item">
+              <img
+                style="background-color: #fff; padding: 10px 8px"
+                src="https://storage.googleapis.com/cms-storage-bucket/flutter-logo.6a07d8a62f4308d2b854.svg"
+                alt="Flutter"
+              />
+            </div>
+            <div class="tech-item"><img src="" alt="React" /></div>
+            <div class="tech-item"><img src="" alt="Node.js" /></div>
+            <div class="tech-item"><img src=" alt="Java"></div>
+            <div class="tech-item"><img src="" alt="Tailwind CSS" /></div>
+            <div class="tech-item"><img src="" alt="HTML5" /></div>
+            <div class="tech-item"><img src="" alt="CSS3" /></div>
+            <div class="tech-item"><img src="" alt="JavaScript" /></div>
+            <div class="tech-item"><img src="" alt="TypeScript" /></div>
+            <div class="tech-item"><img src="" alt="Python" /></div>
+            <div class="tech-item"><img src="" alt="MySQL" /></div>
+            <div class="tech-item"><img src="" alt="MongoDB" /></div>
+            <div class="tech-item"><img src="" alt="PostgreSQL" /></div>
+            <div class="tech-item"><img src="" alt="Firebase" /></div>
+            <div class="tech-item"><img src="" alt="Redis" /></div>
+            <div class="tech-item"><img src="" alt="Kafka" /></div>
+            <div class="tech-item"><img src="" alt="RabbitMQ" /></div>
+            <div class="tech-item"><img src="" alt="Kubernetes" /></div>
+            <div class="tech-item"><img src="" alt="AWS" /></div>
+            <div class="tech-item"><img src="" alt="Azure" /></div>
+            <div class="tech-item"><img src="" alt="Google Cloud" /></div>
+            <div class="tech-item"><img src="" alt="Docker" /></div>
+            <div class="tech-item"><img src="" alt="Grafana" /></div>
+          </div>
+        </div>
+      </section>
+      <section class="success-section">
+        <div>
+          <h2 class="section-title">Success we Delivered</h2>
+          <p class="section-subtitle">
+            Maintaining a strong culture anchored in clear, frequently
+            communicated values is at the heart of what makes our collaborations
+            effective.
+          </p>
+        </div>
 
+        <div class="success-grid">
+          <div class="success-card">
+            <div class="card-header">
+              <h3>Malkiati</h3>
+              <span class="location">📍 Doha, Qatar</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+
+          <div class="success-card">
+            <div class="card-header">
+              <h3>KOZA</h3>
+              <span class="location">📍 Texas, USA</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+
+          <div class="success-card">
+            <div class="card-header">
+              <h3>DKRAJ Jewels</h3>
+              <span class="location">📍 Doha, Qatar</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+
+          <div class="success-card">
+            <div class="card-header">
+              <h3>Portal</h3>
+              <span class="location">📍 India (IND)</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+
+          <div class="success-card">
+            <div class="card-header">
+              <h3>DealinPOS</h3>
+              <span class="location">📍 India (IND)</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+
+          <div class="success-card">
+            <div class="card-header">
+              <h3>DealinDB</h3>
+              <span class="location">📍 India (IND)</span>
+            </div>
+            <p>
+              Tailored software solutions designed to address your specific
+              business challenges and requirements.
+            </p>
+            <p><strong>DOMAIN:</strong> www.malkiati.com</p>
+            <p>
+              <strong>TECHSTACK:</strong> TypeScript, JavaScript, NodeJS,
+              PostgreSQL, AWS EC2, Firebase.
+            </p>
+            <p><strong>DURATION:</strong> 3 Months</p>
+            <button class="view-btn">View Project ↗</button>
+          </div>
+        </div>
+
+        <div class="contact-card">
+          <div class="contact-text">
+            <h3>Ready to discuss your project?</h3>
+            <p>
+              Contact our team to schedule a consultation and discover how our
+              services can help your business thrive.
+            </p>
+          </div>
+
+          <form class="contact-form">
+            <input type="text" placeholder="Type Your Full Name" required />
+            <input type="email" placeholder="Type Your Email" required />
+            <select>
+              <option>Select Your Country</option>
+              <option>India</option>
+              <option>USA</option>
+              <option>UK</option>
+            </select>
+            <select>
+              <option>Select Query Type</option>
+              <option>Development</option>
+              <option>Design</option>
+              <option>Consultation</option>
+            </select>
+            <textarea placeholder="Type Description"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="footer-top">
