[ADD]:career card grid

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="/pages/about.html">About us</a></li>
           <li><a href="/pages/product.html">Products</a></li>
           <li><a href="/pages/service.html">Services</a></li>
-          <li><a href="/pages/career.html" class="contact-btn">Career</a></li>
+          <li><a href="/pages/career.html">Career</a></li>
         </ul>
       </nav>
 
