--- a/pages/career.html
+++ b/pages/career.html
@@ -6,6 +6,8 @@
     <title>career</title>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/career/cardgrid.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -35,7 +37,146 @@
         <a href="#" class="btn">About Us</a>
       </div>
     </header>
+    <main>
+      <section class="career-section">
+        <div class="career-header">
+          <h2>Current Openings</h2>
+          <button class="job-alert-btn">Create Job Alert 🔔</button>
+        </div>
 
+        <div class="career-grid">
+          <div class="career-card">
+            <h3>Full Stack Web Developer</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p><strong>Key Skills:</strong> TypeScript, JavaScript, NodeJS.</p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+
+          <div class="career-card">
+            <h3>Flutter Developer (Mobile)</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p><strong>Key Skills:</strong> Flutter.</p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+
+          <div class="career-card">
+            <h3>QA Full Stack Tester</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p>
+              <strong>Key Skills:</strong> JavaScript, Playwright, API Testing.
+            </p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+
+          <div class="career-card">
+            <h3>Web Developer Intern</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p><strong>Key Skills:</strong> TypeScript, JavaScript, NodeJS.</p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+
+          <div class="career-card">
+            <h3>UI/UX & Graphics Designer</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p><strong>Key Skills:</strong> Flutter.</p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+
+          <div class="career-card">
+            <h3>Sales & Marketing</h3>
+            <p><strong>Experience:</strong> 0–2 Years.</p>
+            <p>
+              <strong>Key Skills:</strong> JavaScript, Playwright, API Testing.
+            </p>
+            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+            <p><strong>Description:</strong></p>
+            <ul>
+              <li>
+                Works with QA CoE team on defining the QA framework and its
+                components.
+              </li>
+              <li>
+                Provides the means and measures for testing all aspects of the
+                product – both functionally and technically, as well as in terms
+                of usability and user experience – to meet all requirements of
+                the solution.
+              </li>
+            </ul>
+            <button class="apply-btn">Apply →</button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="main-footer">
       <div class="footer-top">
         <div class="footer-quote">
