--- a/pages/service.html
+++ b/pages/service.html
@@ -19,14 +19,14 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo">
-          <span class="logo-icon">⚡</span>
+           <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
           <h2>Yantrickaa</h2>
         </div>
         <ul class="nav-links">
           <li><a href="/pages/about.html">About us</a></li>
           <li><a href="/pages/product.html">Products</a></li>
           <li><a href="/pages/service.html">Services</a></li>
-          <li><a href="/pages/service.html" class="contact-btn">Career</a></li>
+          <li><a href="/pages/career.html" >Career</a></li>
         </ul>
       </nav>
 
