--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yantrickaa</title>
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/industry.css" />
     <link rel="stylesheet" href="/css/parterner.css" />
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo">
-          <span class="logo-icon">⚡</span>
+           <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
           <h2>Yantrickaa</h2>
         </div>
         <ul class="nav-links">
@@ -41,19 +41,48 @@
     </header>
     <main>
       <!-- Industry Section -->
-      <section class="industry">
-        <h2>Our <span>Industry</span> Expertise and Solutions</h2>
-        <p>
-          Creating business value at the intersection of your industry
-          transformation and today’s latest technology innovation.
-        </p>
+      <section class="industry-section">
+        <div class="industry-heading">
+          <h2>Our <span>Industry</span> Expertise and Solutions</h2>
+          <p>
+            Creating business value at the intersection of your industry
+            transformation and today’s latest technology innovation.
+          </p>
+        </div>
 
         <div class="industry-grid">
-          <div class="card green"><h3>Finance & Banking</h3></div>
-          <div class="card pink"><h3>Healthcare</h3></div>
-          <div class="card yellow"><h3>Software & Hi-tech</h3></div>
-          <div class="card blue"><h3>Telecom & Media</h3></div>
-          <div class="card orange"><h3>RealEstate</h3></div>
+          <div class="industry-card" style="background-color: #70e3ff">
+            <h3>Finance & Banking</h3>
+            <img src="assets/finance-icon.png" alt="Finance" />
+          </div>
+
+          <div class="industry-card" style="background-color: #f460e3">
+            <h3>Healthcare</h3>
+            <img src="assets/healthcare-icon.png" alt="Healthcare" />
+          </div>
+
+          <div class="industry-card" style="background-color: #e7e850">
+            <h3>
+              Software &<br />
+              Hi-tech
+            </h3>
+            <img src="assets/software-icon.png" alt="Software" />
+          </div>
+
+          <div class="industry-card" style="background-color: #8de1ff">
+            <h3>Finance & Banking</h3>
+            <img src="assets/finance-icon2.png" alt="Finance" />
+          </div>
+
+          <div class="industry-card" style="background-color: #a3a2bd">
+            <h3>Telecom & Media</h3>
+            <img src="assets/telecom-icon.png" alt="Telecom" />
+          </div>
+
+          <div class="industry-card" style="background-color: #f9a26c">
+            <h3>RealEstate</h3>
+            <img src="assets/realestate-icon.png" alt="RealEstate" />
+          </div>
         </div>
       </section>
 
@@ -78,7 +107,7 @@
           <div class="logo-box"><img src="assets/payu.png" alt="PayU" /></div>
         </div>
       </section>
-
+      <!-- testimonials Section -->
       <section class="testimonials">
         <h2>What our Clients says about us ?</h2>
         <div class="testimonial-cards">
@@ -168,6 +197,8 @@
           />
         </div>
       </section>
+
+      <!-- partners-marquee Section -->
       <section class="partners-marquee">
         <h2>Our Partners</h2>
         <p>
@@ -258,78 +289,86 @@
     </main>
 
     <footer class="main-footer">
-  <div class="footer-top">
-    <div class="footer-quote">
-      <h3>Unlocking the Potential<br>of Those Who Advance<br>the World</h3>
-    </div>
+      <div class="footer-top">
+        <div class="footer-quote">
+          <h3>
+            Unlocking the Potential<br />of Those Who Advance<br />the World
+          </h3>
+        </div>
 
-    <div class="footer-links">
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Partners</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Services</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Blogs</a></li>
-        <li><a href="#">Mentors</a></li>
-        <li><a href="#">CSR</a></li>
-      </ul>
-    </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Partners</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Services</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Mentors</a></li>
+            <li><a href="#">CSR</a></li>
+          </ul>
+        </div>
 
-    <div class="footer-contact">
-      <h3>How can we assist you?</h3>
-      <p>
-        We value the opportunity to connect with you. Please submit your inquiries and feedback, 
-        and our experienced professionals are ready to assist you.
-      </p>
+        <div class="footer-contact">
+          <h3>How can we assist you?</h3>
+          <p>
+            We value the opportunity to connect with you. Please submit your
+            inquiries and feedback, and our experienced professionals are ready
+            to assist you.
+          </p>
 
-      <div class="footer-buttons">
-        <button class="country-btn">IND 🇮🇳 ▼</button>
-        <button class="contact-btn">Contact Us →</button>
-      </div>
-    </div>
-  </div>
-
-  <hr class="footer-divider" />
-
-  <div class="footer-bottom">
-    <div class="footer-brand">
-      <h2>Yantrikaa</h2>
-      <p>
-        Boston Consulting Group is an Equal Opportunity Employer. All qualified applicants will receive consideration 
-        for employment without regard to race, color, age, religion, sex, sexual orientation, gender identity/expression, 
-        national origin, protected veteran status, or any other characteristic protected under federal, state, or local law, 
-        where applicable, and those with criminal histories will be considered in a manner consistent with applicable state and local laws.
-      </p>
-
-      <p>
-        Pursuant to Transparency in Coverage final rules (85 FR 72158) set forth in the United States by The Departments of the Treasury, Labor, 
-        and Health and Human Services click <a href="#">here</a> to access the Federal No Surprises Bill Act Disclosure.
-      </p>
-
-      <p>© 2025 Yantrikaa Infotech Pvt Ltd</p>
-    </div>
-
-    <div class="footer-right">
-      <div class="footer-links-right">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Conditions</a>
-        <a href="#">Cookie Preferences</a>
+          <div class="footer-buttons">
+            <button class="country-btn">IND 🇮🇳 ▼</button>
+            <button class="contact-btn">Contact Us →</button>
+          </div>
+        </div>
       </div>
 
-      <div class="social-links">
-        <span>Follow us</span>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-      </div>
-    </div>
-  </div>
-</footer>
+      <hr class="footer-divider" />
 
+      <div class="footer-bottom">
+        <div class="footer-brand">
+          <h2>Yantrikaa</h2>
+          <p>
+            Boston Consulting Group is an Equal Opportunity Employer. All
+            qualified applicants will receive consideration for employment
+            without regard to race, color, age, religion, sex, sexual
+            orientation, gender identity/expression, national origin, protected
+            veteran status, or any other characteristic protected under federal,
+            state, or local law, where applicable, and those with criminal
+            histories will be considered in a manner consistent with applicable
+            state and local laws.
+          </p>
+
+          <p>
+            Pursuant to Transparency in Coverage final rules (85 FR 72158) set
+            forth in the United States by The Departments of the Treasury,
+            Labor, and Health and Human Services click <a href="#">here</a> to
+            access the Federal No Surprises Bill Act Disclosure.
+          </p>
+
+          <p>© 2025 Yantrikaa Infotech Pvt Ltd</p>
+        </div>
+
+        <div class="footer-right">
+          <div class="footer-links-right">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Cookie Preferences</a>
+          </div>
+
+          <div class="social-links">
+            <span>Follow us</span>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
