--- a/pages/product.html
+++ b/pages/product.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo">
-          <span class="logo-icon">⚡</span>
+           <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
           <h2>Yantrickaa</h2>
         </div>
         <ul class="nav-links">
