--- a/index.html
+++ b/index.html
@@ -8,32 +8,48 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/industry.css" />
     <link rel="stylesheet" href="/css/parterner.css" />
-    <link rel="stylesheet" href="/css/testimonials.css" />
+    <link rel="stylesheet" href="/css/clients.css" />
     <link rel="stylesheet" href="/css/worldPresence.css" />
     <link rel="stylesheet" href="/css/footer.css" />
   </head>
   <body>
     <header class="header">
       <nav class="navbar">
+        <div class="menu-toggle" id="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </div>
+
         <div class="logo">
-           <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
+          <img
+            src="/assets/images/yantrickaaLogo.png"
+            alt="logo"
+            class="logo-icon"
+          />
           <h2>Yantrickaa</h2>
         </div>
-        <ul class="nav-links">
+
+        <ul class="nav-links" id="sidebar">
           <li><a href="/pages/about.html">About us</a></li>
           <li><a href="/pages/product.html">Products</a></li>
           <li><a href="/pages/service.html">Services</a></li>
           <li><a href="/pages/career.html">Career</a></li>
         </ul>
+        <div class="sidebar" id="sidebar">
+          <li><a href="/pages/about.html">About us</a></li>
+          <li><a href="/pages/product.html">Products</a></li>
+          <li><a href="/pages/service.html">Services</a></li>
+          <li><a href="/pages/career.html">Career</a></li>
+        </div>
       </nav>
 
       <div class="hero-content">
         <h1>Innovative Software Solutions for Modern Businesses</h1>
         <p>
-          Everything you need to access and manage the Society — in one web
+          Everything you need to access and manage your business — in one
           interface.
         </p>
         <a href="#" class="btn">About Us</a>
@@ -53,12 +69,12 @@
         <div class="industry-grid">
           <div class="industry-card" style="background-color: #70e3ff">
             <h3>Finance & Banking</h3>
-            <img src="assets/finance-icon.png" alt="Finance" />
+            <img src="assets/images/industry/finance.png" alt="Finance" />
           </div>
 
           <div class="industry-card" style="background-color: #f460e3">
             <h3>Healthcare</h3>
-            <img src="assets/healthcare-icon.png" alt="Healthcare" />
+            <img src="assets/images/industry/healthcare.png" alt="Healthcare" />
           </div>
 
           <div class="industry-card" style="background-color: #e7e850">
@@ -66,22 +82,22 @@
               Software &<br />
               Hi-tech
             </h3>
-            <img src="assets/software-icon.png" alt="Software" />
+            <img src="assets/images/industry/software.png" alt="Software" />
           </div>
 
           <div class="industry-card" style="background-color: #8de1ff">
-            <h3>Finance & Banking</h3>
-            <img src="assets/finance-icon2.png" alt="Finance" />
+            <h3>Random</h3>
+            <img src="#" alt="" />
           </div>
 
           <div class="industry-card" style="background-color: #a3a2bd">
             <h3>Telecom & Media</h3>
-            <img src="assets/telecom-icon.png" alt="Telecom" />
+            <img src="assets/images/industry/telicome.png" alt="Telecom" />
           </div>
 
           <div class="industry-card" style="background-color: #f9a26c">
             <h3>RealEstate</h3>
-            <img src="assets/realestate-icon.png" alt="RealEstate" />
+            <img src="assets/images/industry/realstate.png" alt="RealEstate" />
           </div>
         </div>
       </section>
@@ -95,19 +111,30 @@
         </p>
 
         <div class="partner-logos">
-          <div class="logo-box"><img src="assets/meta.png" alt="Meta" /></div>
           <div class="logo-box">
-            <img src="assets/google.png" alt="Google Cloud" />
+            <img src="/assets/images/partener/meta.png" alt="Meta" />
           </div>
-          <div class="logo-box"><img src="assets/aws.png" alt="AWS" /></div>
-          <div class="logo-box"><img src="assets/zoho.png" alt="Zoho" /></div>
           <div class="logo-box">
-            <img src="assets/stripe.png" alt="Stripe" />
+            <img
+              src="/assets/images/partener/googleCloude.png"
+              alt="Google Cloud"
+            />
           </div>
-          <div class="logo-box"><img src="assets/payu.png" alt="PayU" /></div>
+          <div class="logo-box">
+            <img src="/assets/images/partener/aws.png" alt="AWS" />
+          </div>
+          <div class="logo-box">
+            <img src="/assets/images/partener/zoho.png" alt="Zoho" />
+          </div>
+          <div class="logo-box">
+            <img src="/assets/images/partener/stripe.png" alt="Stripe" />
+          </div>
+          <div class="logo-box">
+            <img src="/assets/images/partener/payU.png" alt="PayU" />
+          </div>
         </div>
       </section>
-      <!-- testimonials Section -->
+      <!-- clients Section -->
       <section class="testimonials">
         <h2>What our Clients says about us ?</h2>
         <div class="testimonial-cards">
@@ -118,10 +145,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img
-                src="https://randomuser.me/api/portraits/men/64.jpg"
-                alt="Client Photo"
-              />
+              <img src="/assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -136,7 +160,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="client1.jpg" alt="Client Photo" />
+              <img src="/assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -151,7 +175,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="client1.jpg" alt="Client Photo" />
+              <img src="/assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -166,7 +190,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="client1.jpg" alt="Client Photo" />
+              <img src="/assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -191,10 +215,7 @@
           </div>
         </div>
         <div class="career-image">
-          <img
-            src="https://plus.unsplash.com/premium_photo-1670872717035-bacc4ea61e62?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=870"
-            alt="Team Working"
-          />
+          <img src="assets/images/careerSection.png" alt="Team Working" />
         </div>
       </section>
 
@@ -208,27 +229,41 @@
         </p>
 
         <div class="marquee">
-          <div class="marquee-content">
-            <img
-              src="https://www.dkrajjewels.com/assets/images/logodkrajnew.webp"
-              alt="Dkraj Jewels"
-            />
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Malkiati_Logo.png"
-              alt="Malkiati"
-            />
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Koza_Technologies_logo.png"
-              alt="Koza Technologies"
-            />
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/7/7b/BCS_logo.png"
-              alt="BCS"
-            />
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/d/d1/TARS_Technologies_logo.png"
-              alt="TARS Technologies"
-            />
+          <div class="marquee-track">
+            <div class="marquee-content">
+              <img src="/assets/images/partener/dkRaj.png" alt="Dkraj Jewels" />
+              <img
+                src="/assets/images/partener/malkiatiLogo.png"
+                alt="Malkiati"
+              />
+              <img
+                src="/assets/images/partener/kazaTechLogo.png"
+                alt="Koza Technologies"
+              />
+              <img src="/assets/images/partener/starLogo.png" alt="star" />
+              <img src="/assets/images/partener/bcsLogo.png" alt="BCS" />
+              <img
+                src="/assets/images/partener/tarsTechLogo.png"
+                alt="TARS Technologies"
+              />
+
+              <!-- duplicate -->
+              <img src="/assets/images/partener/dkRaj.png" alt="Dkraj Jewels" />
+              <img
+                src="/assets/images/partener/malkiatiLogo.png"
+                alt="Malkiati"
+              />
+              <img
+                src="/assets/images/partener/kazaTechLogo.png"
+                alt="Koza Technologies"
+              />
+              <img src="/assets/images/partener/starLogo.png" alt="star" />
+              <img src="/assets/images/partener/bcsLogo.png" alt="BCS" />
+              <img
+                src="/assets/images/partener/tarsTechLogo.png"
+                alt="TARS Technologies"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -281,9 +316,11 @@
           </div>
         </div>
 
-        <div class="cta-container">
-          <p>Talk to Domain expert & Get Quote.</p>
-          <button class="cta-btn">Contact Us →</button>
+        <div class="cta-container-parent">
+          <div class="cta-container">
+            <p>Talk to Domain expert & Get Quote.</p>
+            <button class="cta-btn">Contact Us →</button>
+          </div>
         </div>
       </section>
     </main>
@@ -370,5 +407,8 @@
         </div>
       </div>
     </footer>
+    <div class="overlay" id="overlay"></div>
+
+    <script src="/js/menueToggle.js"></script>
   </body>
 </html>
