--- a/index.html
+++ b/index.html
@@ -368,6 +368,24 @@
       <div class="footer-bottom">
         <div class="footer-brand">
           <h2>Yantrikaa</h2>
+          <div class="footer-right">
+            <div class="footer-links-center">
+              <a href="#">Privacy Policy</a>
+              <a href="#">Terms & Conditions</a>
+              <a href="#">Cookie Preferences</a>
+            </div>
+
+            <div class="social-links">
+              <span>Follow us</span>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-x-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+            </div>
+          </div>
+        </div>
+        <div>
           <p>
             Boston Consulting Group is an Equal Opportunity Employer. All
             qualified applicants will receive consideration for employment
@@ -387,23 +405,6 @@
           </p>
 
           <p>© 2025 Yantrikaa Infotech Pvt Ltd</p>
-        </div>
-
-        <div class="footer-right">
-          <div class="footer-links-right">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Cookie Preferences</a>
-          </div>
-
-          <div class="social-links">
-            <span>Follow us</span>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-x-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-          </div>
         </div>
       </div>
     </footer>
