--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/industry.css" />
-    <link rel="stylesheet" href="/css/parterner.css" />
-    <link rel="stylesheet" href="/css/clients.css" />
-    <link rel="stylesheet" href="/css/worldPresence.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/industry.css" />
+    <link rel="stylesheet" href="css/parterner.css" />
+    <link rel="stylesheet" href="css/clients.css" />
+    <link rel="stylesheet" href="css/worldPresence.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <header class="header">
@@ -33,16 +33,16 @@
         </div>
 
         <ul class="nav-links" id="sidebar">
-          <li><a href="/pages/about.html">About us</a></li>
-          <li><a href="/pages/product.html">Products</a></li>
-          <li><a href="/pages/service.html">Services</a></li>
-          <li><a href="/pages/career.html">Career</a></li>
+          <li><a href="pages/about.html">About us</a></li>
+          <li><a href="pages/product.html">Products</a></li>
+          <li><a href="pages/service.html">Services</a></li>
+          <li><a href="pages/career.html">Career</a></li>
         </ul>
         <div class="sidebar" id="sidebar">
-          <li><a href="/pages/about.html">About us</a></li>
-          <li><a href="/pages/product.html">Products</a></li>
-          <li><a href="/pages/service.html">Services</a></li>
-          <li><a href="/pages/career.html">Career</a></li>
+          <li><a href="pages/about.html">About us</a></li>
+          <li><a href="pages/product.html">Products</a></li>
+          <li><a href="pages/service.html">Services</a></li>
+          <li><a href="pages/career.html">Career</a></li>
         </div>
       </nav>
 
