[UPDATE]: relative path, and footer UI

--- a/pages/product.html
+++ b/pages/product.html
@@ -14,25 +14,29 @@
   <body>
     <header class="header">
       <nav class="navbar">
+         <div class="menu-toggle" id="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </div>
         <div class="logo">
            <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
           <h2>Yantrickaa</h2>
         </div>
         <ul class="nav-links">
-          <li><a href="/pages/about.html">About us</a></li>
-          <li><a href="/pages/product.html">Products</a></li>
-          <li><a href="/pages/service.html">Services</a></li>
-          <li><a href="/pages/career.html" class="contact-btn">Career</a></li>
+          <li><a href="./pages/about.html">About us</a></li>
+          <li><a href="./pages/product.html">Products</a></li>
+          <li><a href="./pages/service.html">Services</a></li>
+          <li><a href="./pages/career.html">Career</a></li>
         </ul>
       </nav>
 
       <div class="hero-content">
-        <h1>Innovative Software Solutions for Modern Businesses</h1>
+        <h1>About Yantrickaa</h1>
         <p>
-          Everything you need to access and manage the Society — in one web
-          interface.
+          Yantrikaa is a global consulting firm that partners with leaders in
+          business and society to tackle their most important challenges and
+          capture their greatest opportunities.
         </p>
-        <a href="#" class="btn">About Us</a>
+        <a href="#" class="btn">View video</a>
       </div>
     </header>
 
