--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="css/industry.css" />
     <link rel="stylesheet" href="css/parterner.css" />
     <link rel="stylesheet" href="css/clients.css" />
@@ -134,6 +134,7 @@
           </div>
         </div>
       </section>
+
       <!-- clients Section -->
       <section class="testimonials">
         <h2>What our Clients says about us ?</h2>
@@ -385,7 +386,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="footer-paragraph-container">
           <p>
             Boston Consulting Group is an Equal Opportunity Employer. All
             qualified applicants will receive consideration for employment
@@ -404,10 +405,11 @@
             access the Federal No Surprises Bill Act Disclosure.
           </p>
 
-          <p>© 2025 Yantrikaa Infotech Pvt Ltd</p>
+          <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
         </div>
       </div>
     </footer>
+
     <div class="overlay" id="overlay"></div>
 
     <script src="/js/menueToggle.js"></script>
