[update]:stylesheet path in about page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/industry.css" />
     <link rel="stylesheet" href="css/parterner.css" />
     <link rel="stylesheet" href="css/clients.css" />
@@ -146,7 +146,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="/assets/images/client.png" alt="Client Photo" />
+              <img src="assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -161,7 +161,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="/assets/images/client.png" alt="Client Photo" />
+              <img src="assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -176,7 +176,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="/assets/images/client.png" alt="Client Photo" />
+              <img src="assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -191,7 +191,7 @@
               software running well. Thanks a lot GTech Web Solutions Pvt Ltd.”
             </p>
             <div class="client-info">
-              <img src="/assets/images/client.png" alt="Client Photo" />
+              <img src="assets/images/client.png" alt="Client Photo" />
               <div>
                 <h4>Mr. Suresh Meshram</h4>
                 <p>Director - Technotiumtech</p>
@@ -255,13 +255,13 @@
                 alt="Malkiati"
               />
               <img
-                src="/assets/images/partener/kazaTechLogo.png"
+                src="assets/images/partener/kazaTechLogo.png"
                 alt="Koza Technologies"
               />
-              <img src="/assets/images/partener/starLogo.png" alt="star" />
-              <img src="/assets/images/partener/bcsLogo.png" alt="BCS" />
+              <img src="assets/images/partener/starLogo.png" alt="star" />
+              <img src="assets/images/partener/bcsLogo.png" alt="BCS" />
               <img
-                src="/assets/images/partener/tarsTechLogo.png"
+                src="assets/images/partener/tarsTechLogo.png"
                 alt="TARS Technologies"
               />
             </div>
@@ -412,6 +412,6 @@
 
     <div class="overlay" id="overlay"></div>
 
-    <script src="/js/menueToggle.js"></script>
+    <script src="./js/menueToggle.js"></script>
   </body>
 </html>
