[UPDATE]: re-structure the assets path

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="logo">
           <img
-            src="assets/images/yantrickaaLogo.png"
+            src="assets/images/logo.png"
             alt="logo"
             class="logo-icon"
           />
@@ -69,12 +69,12 @@
         <div class="industry-grid">
           <div class="industry-card" style="background-color: #70e3ff">
             <h3>Finance & Banking</h3>
-            <img src="assets/images/industry/finance.png" alt="Finance" />
+            <img src="assets/images/home/industry/finance.png" alt="Finance" />
           </div>
 
           <div class="industry-card" style="background-color: #f460e3">
             <h3>Healthcare</h3>
-            <img src="assets/images/industry/healthcare.png" alt="Healthcare" />
+            <img src="assets/images/home/industry/healthcare.png" alt="Healthcare" />
           </div>
 
           <div class="industry-card" style="background-color: #e7e850">
@@ -82,22 +82,22 @@
               Software &<br />
               Hi-tech
             </h3>
-            <img src="assets/images/industry/software.png" alt="Software" />
+            <img src="assets/images/home/industry/software.png" alt="Software" />
           </div>
 
-          <div class="industry-card" style="background-color: #8de1ff">
-            <h3>Random</h3>
-            <img src="#" alt="" />
+          <div class="industry-card" style="background-color: #4BC8D5">
+            <h3>SaaS & Ecommerce</h3>
+            <img src="assets/images/home/industry/saas.png" alt="Saas" />
           </div>
 
           <div class="industry-card" style="background-color: #a3a2bd">
             <h3>Telecom & Media</h3>
-            <img src="assets/images/industry/telicome.png" alt="Telecom" />
+            <img src="assets/images/home/industry/telicome.png" alt="Telecom" />
           </div>
 
           <div class="industry-card" style="background-color: #f9a26c">
             <h3>RealEstate</h3>
-            <img src="assets/images/industry/realstate.png" alt="RealEstate" />
+            <img src="assets/images/home/industry/realstate.png" alt="RealEstate" />
           </div>
         </div>
       </section>
@@ -112,25 +112,25 @@
 
         <div class="partner-logos">
           <div class="logo-box">
-            <img src="assets/images/partener/meta.png" alt="Meta" />
+            <img src="assets/images/home/partener/meta.png" alt="Meta" />
           </div>
           <div class="logo-box">
             <img
-              src="assets/images/partener/googleCloude.png"
+              src="assets/images/home/partener/googleCloude.png"
               alt="Google Cloud"
             />
           </div>
           <div class="logo-box">
-            <img src="assets/images/partener/aws.png" alt="AWS" />
+            <img src="assets/images/home/partener/aws.png" alt="AWS" />
           </div>
           <div class="logo-box">
-            <img src="assets/images/partener/zoho.png" alt="Zoho" />
+            <img src="assets/images/home/partener/zoho.png" alt="Zoho" />
           </div>
           <div class="logo-box">
-            <img src="assets/images/partener/stripe.png" alt="Stripe" />
+            <img src="assets/images/home/partener/stripe.png" alt="Stripe" />
           </div>
           <div class="logo-box">
-            <img src="assets/images/partener/payU.png" alt="PayU" />
+            <img src="assets/images/home/partener/payU.png" alt="PayU" />
           </div>
         </div>
       </section>
@@ -234,34 +234,34 @@
             <div class="marquee-content">
               <img src="assets/images/partener/dkRaj.png" alt="Dkraj Jewels" />
               <img
-                src="assets/images/partener/malkiatiLogo.png"
+                src="assets/images/home/partener/malkiatiLogo.png"
                 alt="Malkiati"
               />
               <img
-                src="assets/images/partener/kazaTechLogo.png"
+                src="assets/images/home/partener/kazaTechLogo.png"
                 alt="Koza Technologies"
               />
-              <img src="assets/images/partener/starLogo.png" alt="star" />
-              <img src="assets/images/partener/bcsLogo.png" alt="BCS" />
+              <img src="assets/images/home/partener/starLogo.png" alt="star" />
+              <img src="assets/images/home/partener/bcsLogo.png" alt="BCS" />
               <img
-                src="assets/images/partener/tarsTechLogo.png"
+                src="assets/images/home/partener/tarsTechLogo.png"
                 alt="TARS Technologies"
               />
 
               <!-- duplicate -->
-              <img src="assets/images/partener/dkRaj.png" alt="Dkraj Jewels" />
+              <img src="assets/images/home/partener/dkRaj.png" alt="Dkraj Jewels" />
               <img
-                src="assets/images/partener/malkiatiLogo.png"
+                src="assets/images/home/partener/malkiatiLogo.png"
                 alt="Malkiati"
               />
               <img
-                src="assets/images/partener/kazaTechLogo.png"
+                src="assets/images/home/partener/kazaTechLogo.png"
                 alt="Koza Technologies"
               />
-              <img src="assets/images/partener/starLogo.png" alt="star" />
-              <img src="assets/images/partener/bcsLogo.png" alt="BCS" />
+              <img src="assets/images/home/partener/starLogo.png" alt="star" />
+              <img src="assets/images/home/partener/bcsLogo.png" alt="BCS" />
               <img
-                src="assets/images/partener/tarsTechLogo.png"
+                src="assets/images/home/partener/tarsTechLogo.png"
                 alt="TARS Technologies"
               />
             </div>
