--- a/pages/product.html
+++ b/pages/product.html
@@ -14,18 +14,23 @@
   <body>
     <header class="header">
       <nav class="navbar">
-         <div class="menu-toggle" id="menu-toggle">
+        <div class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-           <img src="/assets/images/yantrickaaLogo.png" alt="logo" class="logo-icon">
+          <img
+            src="../assets/images/logo.png"
+            alt="logo"
+            class="logo-icon"
+          />
           <h2>Yantrickaa</h2>
         </div>
         <ul class="nav-links">
-          <li><a href="./pages/about.html">About us</a></li>
-          <li><a href="./pages/product.html">Products</a></li>
-          <li><a href="./pages/service.html">Services</a></li>
-          <li><a href="./pages/career.html">Career</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./product.html">Products</a></li>
+          <li><a href="./service.html">Services</a></li>
+          <li><a href="./career.html">Career</a></li>
         </ul>
       </nav>
 
