[ADD]: active tab css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/worldPresence.css" />
     <link rel="stylesheet" href="css/footer.css" />
   </head>
-  <body>
-    <header class="header">
+  <body class="home-page">
+    <header class="header" >
       <nav class="navbar">
         <div class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
@@ -412,6 +412,6 @@
 
     <div class="overlay" id="overlay"></div>
 
-    <script src="./js/menueToggle.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
