--- a/pages/career.html
+++ b/pages/career.html
@@ -14,12 +14,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="career-page">
     <header class="header">
-      <nav class="navbar">
+       <nav class="navbar">
         <div class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
+
         <div class="logo">
           <img
             src="../assets/images/logo.png"
@@ -28,15 +29,20 @@
           />
           <h2>Yantrickaa</h2>
         </div>
-        <ul class="nav-links">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./about.html">About us</a></li>
-          <li><a href="./product.html">Products</a></li>
-          <li><a href="./service.html">Services</a></li>
-          <li><a href="./career.html">Career</a></li>
-        </ul>
-      </nav>
 
+        <ul class="nav-links" id="sidebar">
+          <li><a href="about.html">About us</a></li>
+          <li><a href="product.html">Products</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="career.html">Career</a></li>
+        </ul>
+        <div class="sidebar" id="sidebar">
+          <li><a href="about.html">About us</a></li>
+          <li><a href="product.html">Products</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="career.html">Career</a></li>
+        </div>
+      </nav>f
       <div class="hero-content">
         <h1>About Yantrickaa</h1>
         <p>
@@ -370,5 +376,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/main.js"></script>
   </body>
 </html>
