[UPDATE]:about/ mentor section UI

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
         <div class="world-map-container">
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/c/cf/A_large_blank_world_map_with_oceans_marked_in_blue.PNG"
+            src="assets/images/home/worldPresence.png"
             alt="World Map"
             class="world-map"
           />
